--- a/PersonalPortfolio.html
+++ b/PersonalPortfolio.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
-  <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width">
-	<title>repl.it</title>
-  </head>
-  <body>
-	<!-- 
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>repl.it</title>
+</head>
+
+<body>
+    <!-- 
 	  Directions:
 		1. Create a DIV element to contain the page content.
 		2. Inside your DIV, create an H1 tag that contains your name as the text.
@@ -22,25 +24,27 @@
 		  - Switch out your lorem ipsum for Hipster Ipsum (https://hipsum.co/).
 		  - Add another H3 that contains "Contact Me," a paragraph tag containing your email, and a paragraph tag containing your phone number (these can be fake!).
 	 -->
-  </body>
+</body>
 
-    <div>  
-      
-
-        <h1 style=color:blue>Veny Cordova</h1>
-        <h2 style="color:cornflowerblue">Software Developer</h2>
-        <hr>
-        <p>My Favorite Thing About Programming is Learning a New Language</p>
-        <h3 style="color:deepskyblue">My Projects</h3>
-        <p>Coming Soon</p>
-        <h3>About Me</h3>
-        <p>I'm baby glossier kombucha polaroid DIY authentic freegan. 8-bit man braid brooklyn mustache, banjo etsy fingerstache raw denim whatever neutra tote bag la croix single-origin coffee. Locavore pitchfork craft beer, gluten-free disrupt seitan waistcoat slow-carb etsy jean shorts green juice snackwave cred mlkshk. Selvage wayfarers raclette hot chicken.
-
-            Dummy text? More like dummy thicc text, amirite?</p>
-        <h3>Contact Me</h3>
-        <p>Email: Veny@nyu.com Phone Number: 222-333-1234</p>
-        
-    </div>
-  </html>
+<div>
 
 
+    <h1 style=color:blue>Veny Cordova</h1>
+    <h2 style="color:cornflowerblue">Software Developer</h2>
+    <hr>
+    <p>My Favorite Thing About Programming is Learning a New Language</p>
+    <h3 style="color:deepskyblue">My Projects</h3>
+    <p>Coming Soon</p>
+    <h3>About Me</h3>
+    <p>I'm baby glossier kombucha polaroid DIY authentic freegan. 8-bit man braid brooklyn mustache, banjo etsy
+        fingerstache raw denim whatever neutra tote bag la croix single-origin coffee. Locavore pitchfork craft beer,
+        gluten-free disrupt seitan waistcoat slow-carb etsy jean shorts green juice snackwave cred mlkshk. Selvage
+        wayfarers raclette hot chicken.
+
+        Dummy text? More like dummy thicc text, amirite?</p>
+    <h3>Contact Me</h3>
+    <p>Email: Veny@nyu.com Phone Number: 222-333-1234</p>
+
+</div>
+
+</html>
